# explainable_AL

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
apps/al_app/: README.md  active_learning_core.py  app.py  plotting.py  utils.py
apps/shap_app/: launch_shap.py  readme.md  shapey.py
data/: Mpro.csv  TYK2.csv  USP7.csv  d2r_chemberta_data_new.npz  mpro_chemberta_data_new.npz  tyk2_chemberta_data_new.npz  usp7_chemberta_data_new.npz
explainable_al/: __init__.py  acquisition_function.py  active_learning.py  active_learning_core.py  activelearning.py  ecfp.py  experiments.py  featuriser.py  gpregression.py  metrics_plots.py  smiles_to_ecfp8.py  train_gp_model.py  utils.py
notebooks/: al_notebook.ipynb
scripts/: run_al.py
tests/: test_active_learning_core.py  test_utils.py
